--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -21,9 +21,29 @@ code {
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-* body {
+/* * body {
    background-color: 
    #161717
+} */
+
+@layer base{
+  :root{
+    --text-color: rgb(255 255 255);
+    --text-chat-button-send: rgb(209 213 219);
+    --fill-chat-line:rgb(210, 210, 210);;
+    --fill-background: rgb(22, 23, 23);
+    --fill-button:rgb(30 76 227);
+    --fill-chat-background: rgb(42 42 42);
+  }
+  
+  .theme-light {
+    --text-color: rgb(16, 15, 15);
+    --text-chat-button-send: rgb(22, 23, 23);
+    --fill-background: rgb(250, 250, 250);
+    /* --fill-button:rgb(202 138 4); */
+    --fill-chat-background: rgb(222, 234, 241);
+
+  }
 }
 
 @layer utilities {
